# ASPIRE

./: .gitignore  00_robot-test.ipynb  10_BT-test.ipynb  README.md  RealSense.py  Requirements.md  collect_data.ipynb  collect_data.py  create_hf.py  data_collection.ipynb  goals.txt  interactive.ipynb  merged_pcd.ply  object_1.pcd  object_2.pcd  object_3.pcd  object_4.pcd  object_5.pcd  object_6.pcd  object_7.pcd  octo_inference_example.ipynb  open_grasp.ipynb  orient_gripper_and_grasp.ipynb  perception.py  poses_.txt  pyproject.toml  requirements.txt  setup.py  tower_assembly.ipynb  transformer.py
060_interprocess/: 70_process_timeout.py
070_camera_stream/: camera_process.py
080_plan_ranking/: 81A_pb_robot_test.py  81_pybullet_test.py  82A_robot_world.py  84A_pick_block.py  84_track_beliefs.py  85_track_plans.py  87A_robot_metrics.py  88_load_metrics.py  UR5Sim.py  utils.py
090_pdls_reactive/: 90_open_loop.py  PB_BlocksWorld.py  UR5Sim.py  beliefs.py  domain.pddl  env_config.py  stream.pddl  utils.py
090_pdls_responsive/: 90_open_loop.py  91_read_log.py  92_diagnosis.py  92_sampling.py  93_TAMP_replan.py  93j_TAMP_replan.py  93k_TAMP_fix_test.py  94_TAMP_Responsive.py  95_exec_history.py  95_update_test.py  96_Responsive_Fix.py  96_TAMP_Responsive_Fix.py  97_UR5_Test.py  Cheap_PDDL_Parser.py  PB_BlocksWorld.py  Responsive.md  UR5Sim.py  actions.py  beliefs.py  domain.pddl  env_config.py  pb_BT.py  stream.pddl  symbols.py  utils.py
100_pdls_tut/: domain.pddl  monkeyDomain.py  problem.pddl  returnToMonke.py  sas_plan  solver-install.md
110_success_prediction/: 110_rollout.py
120_domain_test/: 122_TAMP_Responsive_Fix.py  123_TAMP_Loop_DW.py  91_read_log.py  Responsive.md  actions.py  beliefs.py  domain.pddl  domain_test.pddl  env_config.py  pb_BT.py  stream.pddl
130_rewrite/: 131_baseline_planner.py  131_pybullet_world.py  133_read_sweep.py  135_responsive_planner.py  136_weighted_Bayes_update.py  137_KL_criterion.py  138_makespan_EQ_BL.py  138_pkl_inspect.py  DEV_PLAN.md  PB_BlocksWorld.py  actions.py  domain.pddl  env_config.py  problem_3.pddl  problem_test.pddl  stream.pddl  symbols.py  utils.py
140_MCTS/: 140_PBVI.py  141_POMCP.py
50_pdls_RYB_blocks/: 53_grasp.py
60_interprocess/: 65_stream_02.py  66_stream_03.py  67_stream_04.py  68_stream_binary.py  bird2.py  (+2 more)
(+16440 files in other folders)
