[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aspire"
version = "2024.9"
authors = [
  { name="James Watson", email="james.watson-2@colorado.edu" },
]
description = "aspire"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'py_trees',
  'psutil',
]

[project.urls]
Homepage = "https://github.com/correlllab/ASPIRE"
Issues = "https://github.com/correlllab/ASPIRE/issues"