[build-system]
requires = ["setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project]
name = "aspire"
version = "2024.9"
authors = [
  { name="James Watson", email="james.watson-2@colorado.edu" },
]

description = "aspire"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'py_trees',
  'psutil',
]

[project.scripts]
build_FD = "setup.setup:build_FD"

[tool.setuptools]
py-modules = ['aspire']

[tool.setuptools.package-data]
downward = ['downward/*']

[project.urls]
Homepage = "https://github.com/correlllab/ASPIRE"
Issues = "https://github.com/correlllab/ASPIRE/issues"

